@@ -112,7 +112,7 @@ if (isset($_GET['act']) && $_GET['act'] === "del") {
 			<?php foreach ($a_bridge as $bridge):?>
 			<tr>
 				<td class="listlr"><?=htmlspecialchars($bridge['if']);?></td>
-				<td class="listr"><?=htmlspecialchars(implode(" ", $bridge['bridgeif']));?></td>
+				<td class="listr"><?=htmlspecialchars(implode(" ", !empty($bridge['bridgeif']) ? $bridge['bridgeif'] : array()));?></td>
 				<td class="listbg"><?=htmlspecialchars($bridge['desc']);?>&nbsp;</td>
 				<td valign="middle" nowrap="nowrap" class="list">
 					<a href="interfaces_bridge_edit.php?uuid=<?=$bridge['uuid'];?>"><img src="e.gif" title="<?=gettext("Edit interface");?>" border="0" alt="<?=gettext("Edit interface");?>" /></a>&nbsp;
